slide/src/test/ui/error/open_paren_then_eof.slide
===in
1 + 2 + (
===in

~~~stdout
~~~stdout

~~~stderr
error[P0002]: Expected an expression, found end of file
  |
1 | 1 + 2 + ( 
  |          ^ expected an expression
  |

error[P0003]: Mismatched closing delimiter `end of file`
  |
1 | 1 + 2 + ( 
  |          ^ expected closing `)`
  |         - help: opening `(` here
  |
~~~stderr

~~~exitcode
1
~~~exitcode
